# aprepo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
specs/001-aprepo-apk-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aprepo-apk-manager/checklists/: requirements.md
specs/001-aprepo-apk-manager/contracts/: cli-interface.md  config-schema.md
src/: config.rs  lib.rs  lock.rs  main.rs  state.rs
src/download/: apkeep.rs  backend.rs  github.rs  mod.rs  webdl.rs
src/process/: apk.rs  mod.rs  xapk.rs
src/util/: logging.rs  mod.rs  zip_validate.rs
tests/: unit_tests.rs
tests/integrational/: Makefile
tests/integrational/fixtures/: generate.sh  server.py  simple.apk  test.apk  test.xapk  test2.apk  universal.xapk
tests/integrational/invalid/duplicate_package/: config.yaml
tests/integrational/invalid/missing_cache_dir/: config.yaml
tests/integrational/invalid/missing_env_var/: config.yaml
tests/integrational/invalid/playstore_metadata/: config.yaml
tests/integrational/realworld/apkpure/: config.yaml
tests/integrational/realworld/github/: config.yaml
tests/integrational/realworld/playstore/: config.yaml
tests/integrational/realworld/rustore/: config.yaml
tests/integrational/realworld/webdl/: config.yaml
tests/integrational/sources/apkpure/: config.yaml  test.sh
tests/integrational/sources/github/: config.yaml  test.sh
tests/integrational/sources/google_play/: config.yaml  test.sh
(+8 files in other folders)
