[package]
name = "aprepo"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
zip = "2.1"
quick-xml = "0.36"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
async-trait = "0.1"
walkdir = "2.5"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
